--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>CO₂-Dashboard</title>
-    <script type="module" src="src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
